# negativuserland

./: .editorconfig  .envrc  .gitignore  .travis.mk  .travis.yml  CNAME  Gemfile  LICENSE.md  LICENSE.rst  Makefile  Makefile.am  README.md  README.rst  abstract.adoc  bibliography.adoc  config.h.meson  configure.ac  index.html  meson.build  meson_options.txt  org.negativuserland.Service.json  params.json  thesis.adoc
art/: design.epz
bugs/: index.html
chapter1/: chapter1.adoc
chapter2/: chapter2.adoc
chapter3/: chapter3.adoc  hardware.adoc  implementation.adoc  requirements.adoc
chapter4/: chapter4.adoc
data/: meson.build  negativuserland.desktop.in  negativuserland.ui  nul-tui.gresource.xml  nul-ui.gresource.xml  tui.stfl
data/demo/: albums.c  artists.c  meson.build
data/tui/: meson.build
data/ui/: menus.ui  meson.build  negativuserland.ui  nul-ui.gresource.xml  others.ui  page-browser.ui  style.css
data/ui/gtk/: menus.ui
dbus/: geolocation-service.xml  meson.build  music-service.xml
include/: nul-external-autocleanups.h  nul-macros.h
nul/: Makefile.am  meson.build  nul-external-autocleanups.h  nul-geolocation-service-util.h  nul-media-player.c  nul-media-player.h  nul-music-service-util.c  nul-music-service-util.h  nul-service-application.c  nul-service-application.h  nul-service-main.c  nul-sparql-query-util.c  nul-tui-stfl-application.c  nul-tui-stfl-application.h  nul-tui-stfl-main.c  nul-ui-application.c  nul-ui-artists.c  nul-ui-artists.h  nul-ui-main-menu.c  nul-ui-main-menu.h  nul-ui-main.c  nul-ui-pagination-util.c  nul-ui-service-state-stack.c  nul-window.c  nul-window.h
nul/player/: meson.build  nul-player-application.c  nul-player-application.h  nul-player-gst.c  nul-player-gst.h
nul/service/: meson.build  nul-geolocation-service-util.c  nul-geolocation-service-util.h  nul-music-service-util.c  nul-music-service-util.h  nul-service-application.c  nul-service-application.h  nul-sparql-query-util.c  nul-sparql-query-util.h
nul/tui/: meson.build  nul-tui-stfl-application.c  nul-tui-stfl-application.h  nul-tui-stfl-main.c
nul/ui/: meson.build  nul-ui-application.c  nul-ui-application.h  nul-ui-artist-albums.c  nul-ui-artist-albums.h  nul-ui-artists.c  nul-ui-artists.h  nul-ui-main-menu.c  nul-ui-main-menu.h  nul-ui-main.c  nul-ui-page-browser.c  nul-ui-page-browser.h  nul-ui-pagination-util.h  nul-ui-service-state-stack.c  nul-ui-service-state-stack.h  nul-ui-window.c  nul-ui-window.h
player/: meson.build  nul-player-application.c  nul-player-application.h  nul-player-gst.c  nul-player-main.c
resources/themes/: csunthesis-theme.yml
schematics/: audio-2.sch  audio.sch  gps.sch
tex/: .gitignore  CSUNthesis.cls  jyelloz.bst  thesis.bib  thesis.tex
tex/chapter1/: introduction.tex
tex/chapter2/: related-works.tex
tex/chapter3/: hardware.tex  implementation.tex  my-solution.tex  requirements.tex
tex/chapter4/: conclusion.tex
